--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,2 @@
-Examples/FDRS_common_files/FDRScredentials.h
+Examples/FDRS_common_files/fdrs_credentials.h
+Examples/FDRS_common_files/fdrs_defaults.h.h
