House keeping on keywords.txt, library.properties and README.md
- added missing categories in keywords.txt
- added dependency of ArduinoJson in library.properties (I didn't add LoRa and PubSubClient but think they should go there as well)
- reformatted paragraph on dependencies  as list for better readability

--- a/library.properties
+++ b/library.properties
@@ -7,4 +7,4 @@ paragraph=FDRS is a highly configurable cloud-agnostic network utilizing LoRa an
 category=Communication
 url=https://github.com/timmbogner/Farm-Data-Relay-System
 architectures=*
-#includes=fdrs_globals.h,fdrs_sensor.h
+depends=ArduinoJson
